[package]
name = "minxp"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/FishAndRips/minxp"
license = "GPL-3.0-only"
description = "Partial reimplementation of std for no-std on unsupported Windows targets."
readme = "README.md"

[dependencies]
spin = "0.10.0"
windows-sys = { version = "0.59.0", default-features = false, features = ["Win32_System_IO", "Win32_System_Console", "Win32_Globalization", "Win32_Security", "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_System_Environment", "Win32_System_LibraryLoader"] }
